# cnn-yolo-pro

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: train.yaml
docs/: NOTES.md
scripts/: benchmark.py  cnn_eval.py  cnn_split.py  cnn_train.py  convert_voc_to_yolo.py  yolo_eval.py  yolo_train.py
src/vision_benchmark_pro/: __init__.py
src/vision_benchmark_pro/cnn/: data.py  model.py
src/vision_benchmark_pro/data/: voc_to_yolo.py
src/vision_benchmark_pro/yolo/: api.py
tests/: test_imports.py
